syntax = "proto3";

option go_package = "/feed";

service Feed {
  rpc addPost (Post) returns (ResponseMessage) {}
  rpc getPost (UserId) returns (MultiplePost) {}
  rpc getUsers (EmptyRequest) returns (MultipleUser) {}
}

// The request message containing the Post's information.

message Post {
  int32 PostId = 1;
  int32 UserId = 2;
  string Content = 3;
  string DatePosted = 4;
}

message MultiplePost {
  repeated Post posts = 1;
}

message UserId {
  int32 Id = 1;
}

// The response message containing the greetings
message ResponseMessage {
  string  message = 1;
}

message EmptyRequest {}

message User {
  uint32 Id = 1;
  string FirstName = 2;
  string LastName = 3;
  string Email = 4;
}

message MultipleUser {
  repeated User users = 1;
}